--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+   <!-- CSS Style Link -->
     <link rel="stylesheet" href="assets/css/style.css">
-    <meta name="color-scheme" content="dark light">
+    <!-- Dark Mode color Scheme -->
+    <!-- <meta name="color-scheme" content="dark light"> -->
+    <!-- Bootstrap Icon -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <title>Document</title>
 </head>
 <body>
@@ -19,6 +22,7 @@
             <a class="btn" href="#blog">Blog</a>
             <a class="btn" href="#services">Services</a>
             <a class="btn" href="#contact">Contact</a>
+            <i class="bi bi-moon-stars-fill" id="toggleDark"></i>
         </div>
     </header>
 
@@ -29,10 +33,11 @@
                 <div class="row">
                     <div class="column">
                         <h1>Hi i'm Trix</h1>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias nam voluptate eius molestiae consectetur nobis facilis quibusdam quidem error quaerat commodi laudantium eveniet beatae, doloribus tempore officiis est dolorum illo?
+                        
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis, odio?</p>
                     </div>
                     <div class="column">
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cupiditate debitis voluptatum explicabo autem libero incidunt, fugit eveniet mollitia laudantium adipisci veniam doloribus eligendi accusamus. Ratione corporis aspernatur cumque. Quos, dolor.
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error, temporibus?</p>
                     </div>
                 </div>
             </div>
