--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <!-- CSS Style Link -->
     <link rel="stylesheet" href="assets/css/style.css">
     <!-- Dark Mode color Scheme -->
-    <!-- <meta name="color-scheme" content="dark light"> -->
+    <meta name="color-scheme" content="dark light">
     <!-- Bootstrap Icon -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <title>Document</title>
@@ -31,13 +31,28 @@
         <div class="grid-container">
             <div class="container">
                 <div class="row">
-                    <div class="column">
+                    <div class="column2">
                         <h1>Hi i'm Trix</h1>
-                        
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis, odio?</p>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus modi eveniet architecto et quos magnam.</p>
+                        <br><br>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, iusto dolor. Inventore doloribus ad voluptates nesciunt autem hic rerum ea.</p>
+                        <br><br><br>
+                        <p><button style="margin-right: 30px;" class="contact">Contact me</button>
+                        <button class="contact">Download CV Resume</button></p>
+                        <div class="icons">
+                            <i class="bi bi-facebook"></i>
+                            <i class="bi bi-messenger"></i>
+                            <i class="bi bi-whatsapp"></i>
+                            <i class="bi bi-github"></i>
+                            <i class="bi bi-apple"></i>
+                            <i class="bi bi-google"></i>
+                            <i class="bi bi-twitter"></i>
+                            <i class="bi bi-mouse">Scroll Down</i>
+                        </div>
                     </div>
-                    <div class="column">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error, temporibus?</p>
+                    
+                    <div class="column2">
+                        <img src="assets/images/manOnTable.svg" alt="manOnTable">
                     </div>
                 </div>
             </div>
