--- a/index.html
+++ b/index.html
@@ -33,9 +33,11 @@
                 <div class="row">
                     <div class="column2">
                         <h1>Hi i'm Trix</h1>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus modi eveniet architecto et quos magnam.</p>
+                        <p>A passionate Full Stack Software Developer having an experience of building Web and Mobile application with JavaScript /
+                        Reactjs / Nodejs /
+                        React Native and some other cool libraries and frameworks.</p>
                         <br><br>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, iusto dolor. Inventore doloribus ad voluptates nesciunt autem hic rerum ea.</p>
+                        <p>High level experience and knowledge in Troubleshooting hardware and software issue and able to build your Computer Cafe or Call center Server and Clients</p>
                         <br><br><br>
                         <p><button style="margin-right: 30px;" class="contact">Contact me</button>
                         <button class="contact">Download CV Resume</button></p>
