--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <title>Document</title>
 </head>
-<body class="lightMode" id="changeStyle">
+<body>
 
     <header>
         <a href="#default" class="logo">TR<span>IX</span></a>
@@ -22,8 +22,7 @@
             <a class="btn" href="#blog">Blog</a>
             <a class="btn" href="#services">Services</a>
             <a class="btn" href="#contact">Contact</a>
-            <i class="bi bi-moon-stars-fill lightMode" id="toggleDark"></i>
-            <button onclick="changeStyle()">change</button>
+            <i class="bi bi-moon-stars-fill" id="toggleDark"></i>
         </div>
     </header>
 
