fix label h1 to left

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         <p>High level experience and knowledge in Troubleshooting hardware and software issue and able to build your Computer Cafe or Call center Server and Clients</p>
                         <br><br><br>
                         <p><button style="margin-right: 30px;" class="contact">Contact me</button>
-                        <button class="contact">Download CV Resume</button></p>
+                        <button class="contact"><a href="/assets/partials/cvResume.html">Download CV Resume</a></button></p>
                         <div class="icons">
                             <i class="bi bi-facebook"></i>
                             <i class="bi bi-messenger"></i>
