fix some header hover

--- a/index.html
+++ b/index.html
@@ -62,6 +62,22 @@
     </section>
 
 
+    <section id="about">
+        <div class="grid-container">
+            <div class="container">
+                <div class="row">
+                    <div class="column2">
+                        1Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima architecto eius deleniti laborum iure reiciendis aperiam nemo necessitatibus quia perspiciatis?
+                    </div>
+                    <div class="column2">
+                        2Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo dolorem iusto assumenda! Accusamus, numquam. Quae, enim. Pariatur alias amet iusto.
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
     <script src="assets/js/script.js"></script>
 </body>
 </html>
