fix again the dark and light mode

--- a/index.html
+++ b/index.html
@@ -40,16 +40,13 @@
                         <p>High level experience and knowledge in Troubleshooting hardware and software issue and able to build your Computer Cafe or Call center Server and Clients</p>
                         <br><br><br>
                         <p><button style="margin-right: 30px;" class="contact">Contact me</button>
-                        <button class="contact"><a href="/assets/partials/cvResume.html">Download CV Resume</a></button></p>
+                        <button class="contact" style="text-decoration: none;"><a href="/assets/partials/cvResume.html" class="contact">Download CV Resume</a></button></p>
                         <div class="icons">
                             <i class="bi bi-facebook"></i>
-                            <i class="bi bi-messenger"></i>
-                            <i class="bi bi-whatsapp"></i>
-                            <i class="bi bi-github"></i>
+                            <i class="bi bi-instagram"></i>
                             <i class="bi bi-apple"></i>
                             <i class="bi bi-google"></i>
                             <i class="bi bi-twitter"></i>
-                            <i class="bi bi-mouse">Scroll Down</i>
                         </div>
                     </div>
                     
