--- a/index.html
+++ b/index.html
@@ -31,6 +31,13 @@
         <div class="grid-container">
             <div class="container">
                 <div class="row">
+                    <div class="icons">
+                        <i class="bi bi-facebook"></i>
+                        <i class="bi bi-instagram"></i>
+                        <i class="bi bi-apple"></i>
+                        <i class="bi bi-google"></i>
+                        <i class="bi bi-twitter"></i>
+                    </div>
                     <div class="column2">
                         <h1>Hi i'm Trix</h1>
                         <p>A passionate Full Stack Software Developer having an experience of building Web and Mobile application with JavaScript /
@@ -39,15 +46,8 @@
                         <br><br>
                         <p>High level experience and knowledge in Troubleshooting hardware and software issue and able to build your Computer Cafe or Call center Server and Clients</p>
                         <br><br><br>
-                        <p><button style="margin-right: 30px;" class="contact">Contact me</button>
-                        <button class="contact" style="text-decoration: none;"><a href="/assets/partials/cvResume.html" class="contact">Download CV Resume</a></button></p>
-                        <div class="icons">
-                            <i class="bi bi-facebook"></i>
-                            <i class="bi bi-instagram"></i>
-                            <i class="bi bi-apple"></i>
-                            <i class="bi bi-google"></i>
-                            <i class="bi bi-twitter"></i>
-                        </div>
+                        <button style="margin-right: 30px;" class="contact">Contact me</button>
+                        <button class="contact" style="text-decoration: none;"><a href="/assets/partials/cvResume.html" class="contact">View CV Resume</a></button>
                     </div>
                     
                     <div class="column2">
