--- a/index.html
+++ b/index.html
@@ -1,80 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- CSS Style Link -->
-    <link rel="stylesheet" href="assets/css/style.css">
-    <!-- Dark Mode color Scheme -->
-    <!-- <meta name="color-scheme" content="dark light"> -->
-    <!-- Bootstrap Icon -->
+    <title>Header</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
 
+<body>
     <header>
-        <a href="#default" class="logo">TR<span>IX</span></a>
-        <div class="header-right" id="header">
-            <a class="btn active" href="#home">Home</a>
-            <a class="btn" href="#about">About</a>
-            <a class="btn" href="#blog">Blog</a>
-            <a class="btn" href="#services">Services</a>
-            <a class="btn" href="#contact">Contact</a>
-            <i class="bi bi-moon-stars-fill" id="toggleDark"></i>
+        <div class="navbar">
+            <div class="logo"><a href="#">Logo</a></div>
+            <ul class="links">
+                <li><a href="#home">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+            <a href="" class="action_btn">Get Started</a>
+            <div class="toggle_btn">
+                <i class="bi bi-list"></i>
+            </div>
+        </div>
+
+        <div class="dropdown_menu">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">Contact</a></li>
+            <li><a href="" class="action_btn">Get Started</a></li>
         </div>
     </header>
 
+    <main>
+        <section id="home">
+            <h1>Welcome</h1>
+            <p>Lorem, ipsum dolor sit amet consectetur<br> adipisicing elit. Expedita, ipsum.</p>
+        </section>
+    </main>
 
-    <section class="home">
-        <div class="grid-container">
-            <div class="container">
-                <div class="row">
-                    <div class="icons">
-                        <i class="bi bi-facebook"></i>
-                        <i class="bi bi-instagram"></i>
-                        <i class="bi bi-apple"></i>
-                        <i class="bi bi-google"></i>
-                        <i class="bi bi-twitter"></i>
-                    </div>
-                    <div class="column2">
-                        <h1>Hi i'm Trix</h1>
-                        <p>A passionate Full Stack Software Developer having an experience of building Web and Mobile application with JavaScript /
-                        Reactjs / Nodejs /
-                        React Native and some other cool libraries and frameworks.</p>
-                        <br><br>
-                        <p>High level experience and knowledge in Troubleshooting hardware and software issue and able to build your Computer Cafe or Call center Server and Clients</p>
-                        <br><br><br>
-                        <button style="margin-right: 30px;" class="contact">Contact me</button>
-                        <button class="contact" style="text-decoration: none;"><a href="/assets/partials/cvResume.html" class="contact">View CV Resume</a></button>
-                    </div>
-                    
-                    <div class="column2">
-                        <img src="assets/images/manOnTable.svg" alt="manOnTable">
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-
-    <section id="about">
-        <div class="grid-container">
-            <div class="container">
-                <div class="row">
-                    <div class="column2">
-                        1Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima architecto eius deleniti laborum iure reiciendis aperiam nemo necessitatibus quia perspiciatis?
-                    </div>
-                    <div class="column2">
-                        2Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo dolorem iusto assumenda! Accusamus, numquam. Quae, enim. Pariatur alias amet iusto.
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-
-    <script src="assets/js/script.js"></script>
+    <script src="script.js"></script>
 </body>
+
 </html>
