--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 <body>
 
     <header>
-        <a href="#default" class="logo">TR<span>IX</span></a>
+        <a href="#default" class="logo">AL<span>EC</span></a>
         <div class="header-right" id="header">
-            <a class="btn active" href="#home">Home</a>
-            <a class="btn" href="#about">About</a>
+            <a class="btn" href="#home">Home</a>
+            <a class="btn active" href="#about">About</a>
             <a class="btn" href="#blog">Blog</a>
             <a class="btn" href="#services">Services</a>
             <a class="btn" href="#contact">Contact</a>
@@ -26,9 +26,10 @@
         </div>
     </header>
 
-
+<h1 class="aboutme">ABOUT ME</h1>
     <section class="home">
         <div class="grid-container">
+            
             <div class="container">
                 <div class="row">
                     <div class="icons">
@@ -39,7 +40,7 @@
                         <i class="bi bi-twitter"></i>
                     </div>
                     <div class="column2">
-                        <h1>Hi i'm Trix</h1>
+                        <h1>Hi i'm Alec</h1>
                         <p>A passionate Full Stack Software Developer having an experience of building Web and Mobile application with JavaScript /
                         Reactjs / Nodejs /
                         React Native and some other cool libraries and frameworks.</p>
@@ -59,7 +60,7 @@
     </section>
 
 
-    <section id="about">
+    <!-- <section id="about">
         <div class="grid-container">
             <div class="container">
                 <div class="row">
@@ -72,7 +73,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
 
     <script src="assets/js/script.js"></script>
